Release of final submit
* Add bins, javadocs updates, logging info, difficulty hard default

* Update README add binaries